--- a/Paso_1_prueba.html
+++ b/Paso_1_prueba.html
@@ -34,7 +34,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <script>
-      let url = 'https://jsonplaceholder.typicode.com/users/';
+          //Traer los datos desde la url 
+        let url = 'https://jsonplaceholder.typicode.com/users/';
         fetch(url)
             .then( response => response.json() )
             .then( data => mostrarData(data) )
@@ -43,6 +44,7 @@
         const mostrarData = (data) => {
             console.log(data)
             let body = ""
+            //Imprimir los usuarios desde la url
             for (var i = 0; i < data.length; i++) {      
                body+=`<tr><td>${data[i].id}</td><td>${data[i].name}</td><td>${data[i].username}</td></tr>`
             }
